--- a/app/views/incidents/_form.html.erb
+++ b/app/views/incidents/_form.html.erb
@@ -9,30 +9,30 @@
       <div class="panel-body">
         <%= form_for @incident, html: { multipart: true } do |f| %>
           <div class="form-group">
-            <%= f.label :title, class:"col-md-3 control-label" %>
+            <%= f.label I18n.t("models.incident.title"), class:"col-md-3 control-label" %>
             <div class="col-md-9">
-              <%= f.text_field :title, autofocus: true, class:"form-control", placeholder:"Usuario com problema para ativar cobertura" %>
+              <%= f.text_field :title, autofocus: true, class:"form-control", placeholder: "Usuario com problema para ativar cobertura" %>
             </div>
           </div>
 
           <div class="form-group">
-            <%= f.label :priority_level, class:"col-md-3 control-label" %>
+            <%= f.label  I18n.t("models.incident.priority_level"), class:"col-md-3 control-label" %>
             <div class="col-md-9">
-              <%= f.select :priority_level, Enumerations::PriorityLevel.keys, { prompt: "Selecione o nível de criticidade da requisição" }, { class: "form-control"} %>
+              <%= f.select :priority_level, Enumerations::PriorityLevel.keys, { prompt: "Selecione o nível de criticidade da requisição." }, { class: "form-control"} %>
             </div>
           </div>
 
           <div class="form-group">
-            <%= f.label :problem_description, class:"col-md-3 control-label" %>
+            <%= f.label I18n.t("models.incident.problem_description"), class:"col-md-3 control-label" %>
             <div class="col-md-9">
-              <%= f.text_area :problem_description, class:"form-control", placeholder:"Ex: O usúario x não consegue efetuar a opção y na tela z" %>
+              <%= f.text_area :problem_description, class:"form-control", placeholder:"Ex: O usúario x não consegue efetuar a opção y na tela z", :maxlength => "550" %>
             </div>
           </div>
 
           <div class="row">
             <div class="col-xs-12">
               <div class="form-group">
-                <%= f.label :evidence_screen, class:"col-md-3 control-label" %>
+                <%= f.label I18n.t("models.incident.evidence_screen"), class:"col-md-3 control-label" %>
                 <div class="col-md-9">
                   <%= f.file_field :evidence_screen, as: :file %>
                 </div>
@@ -41,7 +41,7 @@
           </div>
 
           <div class="form-group">
-            <%= f.label :plataform_kind, class:"col-md-3 control-label" %>
+            <%= f.label I18n.t("models.incident.plataform_kind"), class:"col-md-3 control-label" %>
             <div class="col-md-9">
               <%= f.select :plataform_kind, Enumerations::IncidentPlataform.keys, { prompt: "Selecione em qual plataforma ocorre o erro." }, { class: "form-control"} %>
             </div>
@@ -49,21 +49,21 @@
 
 
           <div class="form-group">
-            <%= f.label :user_email, class:"col-md-3 control-label" %>
+            <%= f.label I18n.t("models.incident.user_email"), class:"col-md-3 control-label" %>
             <div class="col-md-9">
               <%= f.text_field :user_email, class:"form-control", placeholder:"Ex: customer@tksg.com" %>
             </div>
           </div>
 
           <div class="form-group">
-            <%= f.label :user_cpf, class:"col-md-3 control-label" %>
+            <%= f.label I18n.t("models.incident.user_cpf"), class:"col-md-3 control-label" %>
             <div class="col-md-9">
               <%= f.text_field :user_cpf, class:"form-control", placeholder:"Ex: 78066395353" %>
             </div>
           </div>
 
           <div class="form-group">
-            <%= f.label :contract_id, class:"col-md-3 control-label" %>
+            <%= f.label I18n.t("models.incident.contract_id"), class:"col-md-3 control-label" %>
             <div class="col-md-9">
               <%= f.text_field :contract_id, class:"form-control", placeholder:"Ex: 17908" %>
             </div>
