--- a/app/views/incidents/solve.html.erb
+++ b/app/views/incidents/solve.html.erb
@@ -59,14 +59,17 @@
             <div class="form-group">
               <%= f.label :Contexto, class:"col-md-3 control-label" %>
               <div class="col-md-9">
-                <%= f.select :entity, Enumerations::IncidentEntity.keys, { prompt: "Selecione o escopo do problema" }, { class: "form-control"} %>
+                <%= f.select :entity, Enumerations::IncidentEntity.translations , { prompt: "Selecione o tipo de problema do requisição" }, { class: "form-control"} %>
+
+
+
               </div>
             </div>
 
             <div class="form-group">
               <%= f.label :Análise, class:"col-md-3 control-label" %>
               <div class="col-md-9">
-                <%= f.text_area :solution_description, class:"form-control", placeholder:"Foi efetuado a alteração do email do usuário x" %>
+                <%= f.text_area :solution_description, class:"form-control", placeholder:"Foi efetuado a alteração do email do usuário x", :maxlength => "550" %>
               </div>
             </div>
 
