--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -18,8 +18,8 @@
       <tr>
         <th class="not_mapped_style" style="text-align:center">ID</th>
         <th class="not_mapped_style" style="text-align:center">Resumo do Problema</th>
-        <th class="not_mapped_style" style="text-align:center">Reportador por</th>
         <th class="not_mapped_style" style="text-align:center">Nível de Prioridade</th>
+        <th class="not_mapped_style" style="text-align:center">Reportador por</th>
         <th class="not_mapped_style" style="text-align:center">Aberto Em</th>
         <th class="not_mapped_style" style="text-align:center">Última Atualização</th>
         <th class="not_mapped_style" style="text-align:center">Status</th>
@@ -31,32 +31,33 @@
       <% @incidents.each do |incident| %>
         <tr style= "background: <%= cycle('white', 'ice') %>">
           <td><%= incident.id %></td>
-          <td><%= incident.title %></td>
-          <td><%= incident.backofficer.name %></td>
+          <td><%= incident.title.truncate(35) %></td>
 
           <% if incident.priority_level == Enumerations::PriorityLevel::LOW %>
-            <td><span class='label label-info'><%= I18n.t("enumerations.enumerations/priority_level.low") %></span></td>
+            <td><span class='label label-info'><%= I18n.t("enumerations.enumerations/priority_level.#{incident.priority_level}") %></span></td>
           <% elsif incident.priority_level == Enumerations::PriorityLevel::MEDIUM %>
-            <td><span class='label label-warning'><%= I18n.t("enumerations.enumerations/priority_level.medium") %></span></td>
+            <td><span class='label label-warning'><%= I18n.t("enumerations.enumerations/priority_level.#{incident.priority_level}") %></span></td>
           <% elsif incident.priority_level == Enumerations::PriorityLevel::HIGH %>
-            <td><span class='label label-danger'><%= I18n.t("enumerations.enumerations/priority_level.high") %></span></td>
+            <td><span class='label label-danger'><%= I18n.t("enumerations.enumerations/priority_level.#{incident.priority_level}") %></span></td>
           <% end %>
+
+          <td><%= incident.backofficer.name %></td>
 
           <td><%= brazil_date(incident.created_at) %></td>
           <td><%= brazil_date(incident.updated_at) %></td>
 
           <% if incident.status == Enumerations::IncidentStatus::SOLVED %>
-            <td><span class='label label-success'><%= I18n.t("enumerations.enumerations/incident_status.solved") %></span></td>
+            <td><span class='label label-success'><%= I18n.t("enumerations.enumerations/incident_status.#{incident.status}") %></span></td>
           <% elsif incident.status == Enumerations::IncidentStatus::OPEN %>
-            <td><span class='label label-warning'><%= I18n.t("enumerations.enumerations/incident_status.open") %></span></td>
+            <td><span class='label label-warning'><%= I18n.t("enumerations.enumerations/incident_status.#{incident.status}") %></span></td>
           <% elsif incident.status == Enumerations::IncidentStatus::PENDING %>
-            <td><span class='label label-info'><%= I18n.t("enumerations.enumerations/incident_status.pending") %></span></td>
+            <td><span class='label label-info'><%= I18n.t("enumerations.enumerations/incident_status.#{incident.status}") %></span></td>
           <% elsif incident.status == Enumerations::IncidentStatus::CLOSED %>
-            <td><span class='label label-default'><%= I18n.t("enumerations.enumerations/incident_status.closed") %></span></td>
+            <td><span class='label label-default'><%= I18n.t("enumerations.enumerations/incident_status.#{incident.status}") %></span></td>
           <% elsif incident.status == Enumerations::IncidentStatus::REOPENED %>
-            <td><span class='label label-danger'><%= I18n.t("enumerations.enumerations/incident_status.reopened") %></span></td>
+            <td><span class='label label-danger'><%= I18n.t("enumerations.enumerations/incident_status.#{incident.status}") %></span></td>
           <% elsif incident.status == Enumerations::IncidentStatus::ANALYSING %>
-            <td><span class='label label-primary'><%= I18n.t("enumerations.enumerations/incident_status.analysing") %></span></td>
+            <td><span class='label label-primary'><%= I18n.t("enumerations.enumerations/incident_status.#{incident.status}") %></span></td>
           <% end %>
 
           <% if incident.analyst.blank? %>
