--- a/app/views/incidents/reopen.html.erb
+++ b/app/views/incidents/reopen.html.erb
@@ -79,7 +79,7 @@
           <div class="form-group">
             <%= f.label :Motivo_da_reabertura, class:"col-md-3 control-label" %>
             <div class="col-md-9">
-              <%= f.text_area :reopening_description, class:"form-control", placeholder: "Problema não foi resolvido, usuáro não consegue chamar o guincho" %>
+              <%= f.text_area :reopening_description, class:"form-control", placeholder: "Ex: 'Problema não foi resolvido, usuáro não consegue chamar o guincho'" %>
             </div>
           </div>
 
