--- a/app/views/incidents/_form.html.erb
+++ b/app/views/incidents/_form.html.erb
@@ -11,14 +11,14 @@
           <div class="form-group">
             <%= f.label I18n.t("models.incident.title"), class:"col-md-3 control-label" %>
             <div class="col-md-9">
-              <%= f.text_field :title, autofocus: true, class:"form-control", placeholder: "Usuario com problema para ativar cobertura" %>
+              <%= f.text_field :title, autofocus: true, class:"form-control", placeholder: "Usuario com problema para ativar cobertura", :maxlength => "50" %>
             </div>
           </div>
 
           <div class="form-group">
             <%= f.label  I18n.t("models.incident.priority_level"), class:"col-md-3 control-label" %>
             <div class="col-md-9">
-              <%= f.select :priority_level, Enumerations::PriorityLevel.keys, { prompt: "Selecione o nível de criticidade da requisição." }, { class: "form-control"} %>
+              <%= f.select :priority_level, Enumerations::PriorityLevel.to_a, { prompt: "Selecione o nível de criticidade da requisição." }, { class: "form-control"} %>
             </div>
           </div>
 
@@ -43,7 +43,7 @@
           <div class="form-group">
             <%= f.label I18n.t("models.incident.plataform_kind"), class:"col-md-3 control-label" %>
             <div class="col-md-9">
-              <%= f.select :plataform_kind, Enumerations::IncidentPlataform.keys, { prompt: "Selecione em qual plataforma ocorre o erro." }, { class: "form-control"} %>
+              <%= f.select :plataform_kind, Enumerations::IncidentPlataform.to_a, { prompt: "Selecione em qual plataforma ocorre o erro." }, { class: "form-control"} %>
             </div>
           </div>
 
