--- a/app/views/incidents/reopen.html.erb
+++ b/app/views/incidents/reopen.html.erb
@@ -89,8 +89,9 @@
 
           <div class="form-group">
             <div class="col-md-offset-3 col-md-9">
-              <%= f.submit "Confirmar", class:"btn btn-success" do %>
-              <% end %>
+              <%= f.submit "Confirmar", class:"btn btn-success", data: { confirm: "Tem certeza que deseja reabrir a requisição?" } do %>
+
+            <% end %>
             </div>
           </div>
         </div>
@@ -98,7 +99,4 @@
     </div>
   </div>
 <% end %>
-
-<hr>
-
 <%= link_to 'Lista de Incidentes', incidents_path, class: "btn btn-primary" %>
