--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -151,7 +151,7 @@
     <% elsif (@incident.status == Enumerations::IncidentStatus::ANALYSING || @incident.status == Enumerations::IncidentStatus::PENDING) && @incident.analyst_id != current_analyst.id %>
       <%= link_to 'Iniciar Análise', incident_analyse_path(@incident.id), method: :patch, class: "btn btn-danger disabled", :disabled => true %>
       <%= "  |  " %>
-      <%= link_to 'Pegar Requisição', incident_capture_path(@incident.id), method: :patch, class: "btn btn-success" %>
+      <%= link_to 'Pegar Requisição', incident_capture_path(@incident.id), method: :patch, data: { confirm: 'Tem certeza que deseja capturar essa requisição?' }, class: "btn btn-success" %>
     <% elsif (@incident.status == Enumerations::IncidentStatus::PENDING || @incident.status == Enumerations::IncidentStatus::REOPENED) && @incident.analyst_id == current_analyst.id %>
       <td><%= link_to 'Reiniciar Análise', incident_analyse_path(@incident.id), method: :patch, class: "btn btn-danger" %></td>
     <% end %>
