--- a/app/views/backofficers/registrations/new.html.erb
+++ b/app/views/backofficers/registrations/new.html.erb
@@ -13,7 +13,17 @@
       <div class="panel-body">
 
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-          <%= devise_error_messages! %>
+
+          <% if resource.errors.any? %>
+            <div class="alert alert-danger alert-dismissable">
+              <button type="button" class="close" data-dismiss="alert" aria-hidden="true">x</button>
+              <ul>
+                <% resource.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
 
           <div class="field">
             <%= f.label :Nome, class:"col-md-3 control-label" %><br />
